# goldenpath

./: .gitignore  CLAUDE.md  README.md
.github/: WORKFLOWS.md
cli/: README.md  shop
config/: README.md  enterprise.env.example  enterprise.env.team.example  install-team-env.sh  team-env-setup.md
docs/: readme.md  repository-guide.md
mcp/: Dockerfile  README.md  cloudbuild.yaml  config.example.env  guide.md  pyproject.toml  requirements.txt
mcp/examples/: claude-desktop-config.example.json  claude-mcp-remote.example.json  claude-mcp.example.json
mcp/goldenpath_mcp/: __init__.py  __main__.py  audit.py  auth.py  config.py  content.py  enterprise.py  gcp.py  gcp_adc.py  github_ops.py  server.py  validate.py
mcp/infra/: dev.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
modules/: README.md
platform/: README.md
scripts/: README.md  check-repo-hygiene.sh  deploy-mcp-cloudrun.sh  goldenpath-setup-bash.sh  goldenpath-setup-ps.sh  goldenpath-setup-py.sh  goldenpath-setup-ui.sh  goldenpath-setup.ps1  goldenpath-setup.sh  import-mcp-infra-state.sh  reset-local-config.sh  standup-teardown-env.sh  teardown-personal-test.sh
skills/: README.md
templates/: README.md  catalog.json
tests/: README.md  Run-SetupWizardTests.ps1  bootstrap-module.tests.ps1  conftest.py  goldenpath-setup.tests.ps1  helpers.py  ps-wizard-modules.smoke.ps1  pytest.ini  requirements-test.txt  run-all-tests.sh  run-integration-tests.sh  test_catalog_schema.py  test_data_store_generator.py  test_goldenpath_dryrun.py  test_goldenpath_ops.py  test_goldenpath_ops_helpers.py  (+13 more)
(+188 files in other folders)
